added configs to config file - started yet

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 cloudOrganizationSimulations {
     basic {
         hosts_count = 4
-        host_mips = 10000
+        host_mips = 1000
         host_pe_count = 8
         host_ram = 16_384
         host_bw = 1000
@@ -21,7 +21,123 @@ cloudOrganizationSimulations {
         tree_count = 3
     }
 
-    complexSimulation {
+    power {
+        static_power = 20
+        max_power = 100
+        startup_power = 10
+        shutdown_power = 5
+        startup_delay = 0
+        shutdown_delay = 0
+    }
+
+    mapReduce {
+        mapper_cloudlets = 3
+        reducer_cloudlets = 1
+        app_count = 30
+        # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        allocationPolicy = "SIMPLE"
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        vmAllocationPolicy = "TIMESHARED"
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        cloudletAllocationPolicy = "SPACESHARED"
+
+        # task details
+        mapTaskLength = 1000
+        mapTaskMemory = 1024
+        sendTaskMemory = 512
+        receiveTaskMemory = 512
+        packetsToSend = 200
+        packetBytes = 1000
+        reduceTaskLength = 500
+        reduceTaskMemory = 512
+
+        maxTasks = 4
+        minTasks = 2
+    }
+
+    threeTier {
+        client_cloudlets = 1
+        server_cloudlets = 2
+        app_count = 40
+        # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        allocationPolicy = "SIMPLE"
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        vmAllocationPolicy = "TIMESHARED"
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        cloudletAllocationPolicy = "SPACESHARED"
+
+        # task details
+        firstTaskExecLength = 500
+        firstTaskExecMemoryConsumption = 512
+        firstTaskSendMemoryConsumption = 256
+        firstTaskReceiveMemoryConsumption = 256
+        firstTaskPacketsToSend = 50
+        firstTaskPacketBytes = 1000
+
+        secondTaskExecLength = 2000
+        secondTaskExecMemoryConsumption = 512
+        secondTaskSendToFirstMemoryConsumption = 256
+        secondTaskReceiveFromFirstMemoryConsumption = 256
+        secondTaskSendToThirdMemoryConsumption = 512
+        secondTaskReceiveFromThirdMemoryConsumption = 512
+        secondTaskPacketsToSendToFirst = 10
+        secondTaskPacketBytesSendToFirst = 1000
+        secondTaskPacketsToSendToThird = 100
+        secondTaskPacketBytesSendToThird = 1000
+
+        thirdTaskExecLength = 500
+        thirdTaskExecMemoryConsumption = 512
+        thirdTaskSendMemoryConsumption = 256
+        thirdTaskReceiveMemoryConsumption = 256
+        thirdTaskPacketsToSend = 50
+        thirdTaskPacketBytes = 1000
+
+        maxTasks = 5
+        minTasks = 3
+    }
+
+    network {
+        edge_switch_bw_down = 10.0
+        edge_switch_bw_up = 10.0
+        edge_switch_switching_delay = 1.0
+
+        aggregate_switch_bw_down = 50.0
+        aggregate_switch_bw_up = 50.0
+        aggregate_switch_switching_delay = 1.0
+
+        root_switch_bw_down = 100.0
+        root_switch_bw_up = 100.0
+        root_switch_switching_delay = 1.0
+    }
+
+    simpleCloudlet {
+        app_count = 100
+        # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        allocationPolicy = "SIMPLE"
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        vmAllocationPolicy = "TIMESHARED"
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        cloudletAllocationPolicy = "SPACESHARED"
+    }
+
+    multiDatacenter {
+        # inter datacenter connection variables
+        inter_dc_connection_bw = 250.0
+        inter_dc_connection_latency = 1.0
+        # connection variables for connection between datacenter and broker
+        dc_broker_connection_bw = 500.0
+        dc_broker_connection_latency = 0.5
+        #datacenters
+        datacenter_count = 5
+        # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        allocationPolicy = "BESTFIT"
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        vmAllocationPolicy = "TIMESHARED"
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        cloudletAllocationPolicy = "SPACESHARED"
+    }
+
+    commonSimulation {
       hosts_count = 9 # should be a multiple of 3 (constraint for tree topology)
       host_mips = 1000
       host_pe_count = 4
@@ -32,25 +148,18 @@ cloudOrganizationSimulations {
       vm_count = 18
       vm_pe_count = 2
       vm_ram = 4000
-      vm_bw = 1
+      vm_bw = 10
       vm_size = 20000
 
-      client_cloudlet_task_count = 1
-      server_cloudlet_task_count = 2
-
-      app_count = 50
       cloudlet_pe_count = 1
       cloudlet_length = 1000
       cloudlet_file_size = 200
       cloudlet_output_size = 500
 
-      connection_bw = 250.0d
-      connection_latency = 1.0d
-
       # Utilization
-      cloudlet_cpu_utilization = 0.8
-      cloudlet_ram_utilization = 0.5
-      cloudlet_bw_utilization = 0.3
+      cloudlet_cpu_utilization = 0.9
+      cloudlet_ram_utilization = 0.7
+      cloudlet_bw_utilization = 0.8
       cloudlet_initial_ram_utilization = 0.1
       cloudlet_max_ram_utilization = 0.8
 
@@ -60,12 +169,6 @@ cloudOrganizationSimulations {
       cost_per_storage = 0.0001
       cost_per_bw = 0.01
 
-      # Simulated annealing heuristic params
-      initial_temperature = 0.1
-      cold_temperature = 0.0001
-      cooling_rate = 0.001
-      number_of_searches = 100
-
       # scaling
       # horizontal scaling
       cpu_overload_threshold = 0.8
@@ -73,6 +176,29 @@ cloudOrganizationSimulations {
       ram_scaling_factor = 0.1
       ram_upper_utilization_threshold = 0.8
       ram_lower_utilization_threshold = 0.3
+    }
+
+    saas {
+    }
+
+    paas {
+    }
+
+    iaas {
+    }
+
+    faas {
+    }
+
+    allocation {
+        random_allocation_policy_seed = 30
+    }
+
+    vmscheduler {
+        vmMigrationCpuOverhead = 0.1
+        vmChanceForPseudoRandom = 0.9
+        pseudoRandomPolicySeed = 60
+        randomPolicySeed = 44
     }
     
 }
