removed hardcoding and moved everything to config file

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ cloudOrganizationSimulations {
         hosts_count = 4
         host_mips = 1000
         host_pe_count = 8
-        host_ram = 16_384
+        host_ram = 16384
         host_bw = 1000
         host_storage = 1000000
 
@@ -15,6 +15,10 @@ cloudOrganizationSimulations {
         cloudlet_length = 1000
         cloudlet_file_size = 200
         cloudlet_output_size = 500
+        # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        allocationPolicyType = "SIMPLE"
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        vmSchedulerType = "TIMESHARED"
     }
 
     treeTopology {
@@ -35,11 +39,11 @@ cloudOrganizationSimulations {
         reducer_cloudlets = 1
         app_count = 30
         # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
-        allocationPolicy = "SIMPLE"
+        allocationPolicyType = "SIMPLE"
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
-        vmAllocationPolicy = "TIMESHARED"
+        vmSchedulerType = "TIMESHARED"
         # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
-        cloudletAllocationPolicy = "SPACESHARED"
+        cloudletSchedulerType = "SPACESHARED"
 
         # task details
         mapTaskLength = 1000
@@ -60,11 +64,11 @@ cloudOrganizationSimulations {
         server_cloudlets = 2
         app_count = 40
         # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
-        allocationPolicy = "SIMPLE"
+        allocationPolicyType = "SIMPLE"
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
-        vmAllocationPolicy = "TIMESHARED"
+        vmSchedulerType = "SPACESHARED"
         # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
-        cloudletAllocationPolicy = "SPACESHARED"
+        cloudletSchedulerType = "TIMESHARED"
 
         # task details
         firstTaskExecLength = 500
@@ -113,32 +117,84 @@ cloudOrganizationSimulations {
     simpleCloudlet {
         app_count = 100
         # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
-        allocationPolicy = "SIMPLE"
+        allocationPolicyType = "SIMPLE"
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
-        vmAllocationPolicy = "TIMESHARED"
+        vmSchedulerType = "TIMESHARED"
         # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
-        cloudletAllocationPolicy = "SPACESHARED"
+        cloudletSchedulerType = "SPACESHARED"
     }
 
     multiDatacenter {
         # inter datacenter connection variables
-        inter_dc_connection_bw = 250.0
+        inter_dc_connection_bw = 2500.0
         inter_dc_connection_latency = 1.0
         # connection variables for connection between datacenter and broker
-        dc_broker_connection_bw = 500.0
-        dc_broker_connection_latency = 0.5
+        dc_broker_connection_bw = 2500.0
+        dc_broker_connection_latency = 0.2
+
+        # app counts
+        simple_cloudlet_count = 250
+        client_server_app_count = 100
+        map_reduce_app_count = 100
         #datacenters
         datacenter_count = 5
+
+        hosts_count = 9
+        host_mips = 1000
+        host_pe_count = 4
+        host_ram = 16384
+        host_bw = 1000000
+        host_storage = 1000000
+
+        vm_count = 18
+        vm_pe_count = 2
+        vm_ram = 2048
+        vm_bw = 1000
+        vm_size = 20000
+
+        cloudlet_pe_count = 1
+        cloudlet_length = 1000
+        cloudlet_file_size = 200
+        cloudlet_output_size = 500
+
+        # Utilization
+        cloudlet_cpu_utilization = 0.9
+        cloudlet_ram_utilization = 0.5
+        cloudlet_bw_utilization = 0.3
+        cloudlet_initial_ram_utilization = 0.1
+        cloudlet_max_ram_utilization = 0.9
+
+        # cost
+        cost_per_sec = 0.001
+        cost_per_mem = 0.01
+        cost_per_storage = 0.0001
+        cost_per_bw = 0.01
+
+        # Simulated annealing heuristic params
+        initial_temperature = 0.1
+        cold_temperature = 0.001
+        cooling_rate = 0.01
+        number_of_searches = 50
+
+        # scaling
+        # horizontal scaling
+        cpu_overload_threshold = 0.8
+        # vertical ram scaling
+        ram_scaling_factor = 0.1
+        ram_upper_utilization_threshold = 0.8
+        ram_lower_utilization_threshold = 0.3
+
         # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
-        allocationPolicy = "BESTFIT"
+        allocationPolicyType = "BESTFIT"
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
-        vmAllocationPolicy = "TIMESHARED"
+        vmSchedulerType = "TIMESHARED"
         # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
-        cloudletAllocationPolicy = "SPACESHARED"
+        cloudletSchedulerType = "SPACESHARED"
     }
 
     commonSimulation {
-      hosts_count = 9 # should be a multiple of 3 (constraint for tree topology)
+      # should be a multiple of 3 (constraint for tree topology)
+      hosts_count = 9
       host_mips = 1000
       host_pe_count = 4
       host_ram = 16384
@@ -148,7 +204,7 @@ cloudOrganizationSimulations {
       vm_count = 18
       vm_pe_count = 2
       vm_ram = 4000
-      vm_bw = 10
+      vm_bw = 100
       vm_size = 20000
 
       cloudlet_pe_count = 1
@@ -159,7 +215,7 @@ cloudOrganizationSimulations {
       # Utilization
       cloudlet_cpu_utilization = 0.9
       cloudlet_ram_utilization = 0.7
-      cloudlet_bw_utilization = 0.8
+      cloudlet_bw_utilization = 0.5
       cloudlet_initial_ram_utilization = 0.1
       cloudlet_max_ram_utilization = 0.8
 
@@ -179,16 +235,254 @@ cloudOrganizationSimulations {
     }
 
     saas {
+        saas_hosts_count = 9
+        saas_host_mips = 1000
+        saas_host_pe_count = 4
+        saas_host_ram = 16384
+        saas_host_bw = 1000
+        saas_host_storage = 1000000
+
+        saas_vm_count = 18
+        saas_vm_pe_count = 2
+        saas_vm_ram = 4000
+        saas_vm_bw = 1
+        saas_vm_size = 20000
+
+        # Type 1 cloudlet attributes
+        saas_type1_cloudlet_pe_count = 1
+        saas_type1_cloudlet_length = 1000
+        saas_type1_cloudlet_file_size = 200
+        saas_type1_cloudlet_output_size = 500
+
+        # Type 2 cloudlet attributes
+        saas_type2_cloudlet_pe_count = 2
+        saas_type2_cloudlet_length = 500
+
+        # Type 3 cloudlet attributes
+        saas_type3_cloudlet_pe_count = 2
+        saas_type3_cloudlet_length = 1000
+        saas_type3_cloudlet_file_size = 200
+        saas_type3_cloudlet_output_size = 500
+
+        # Utilization
+        saas_cloudlet_cpu_utilization = 0.8
+        saas_cloudlet_ram_utilization = 0.5
+        saas_cloudlet_bw_utilization = 0.3
+        saas_cloudlet_initial_ram_utilization = 0.1
+        saas_cloudlet_max_ram_utilization = 0.8
+
+        # cost
+        saas_cost_per_sec = 0.001
+        saas_cost_per_mem = 0.01
+        saas_cost_per_storage = 0.0001
+        saas_cost_per_bw = 0.01
+
+        # scaling
+        # horizontal scaling
+        saas_cpu_overload_threshold = 0.8
+        # vertical ram scaling
+        saas_ram_scaling_factor = 0.1
+        saas_ram_upper_utilization_threshold = 0.8
+        saas_ram_lower_utilization_threshold = 0.3
+
+        # allocation policy "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        saasAllocationPolicyType = "SIMPLE"
+
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        saasVmSchedulingType = "TIMESHARED"
+
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        saasCloudletSchedulingType = "SPACESHARED"
     }
 
     paas {
+        paas_hosts_count = 9
+        paas_host_mips = 1000
+        paas_host_pe_count = 4
+        paas_host_ram = 16384
+        paas_host_bw = 1000
+        paas_host_storage = 1000000
+        
+        paas_vm_count = 18
+        paas_vm_pe_count = 2
+        paas_vm_ram = 4000
+        paas_vm_bw = 1
+        paas_vm_size = 20000
+        
+        # Utilization
+        paas_cloudlet_cpu_utilization = 0.8
+        paas_cloudlet_ram_utilization = 0.5
+        paas_cloudlet_bw_utilization = 0.3
+        paas_cloudlet_initial_ram_utilization = 0.1
+        paas_cloudlet_max_ram_utilization = 0.8
+        
+        # cost
+        paas_cost_per_sec = 0.001
+        paas_cost_per_mem = 0.01
+        paas_cost_per_storage = 0.0001
+        paas_cost_per_bw = 0.01
+        
+        # scaling
+        # horizontal scaling
+        paas_cpu_overload_threshold = 0.8
+        # vertical ram scaling
+        paas_ram_scaling_factor = 0.1
+        paas_ram_upper_utilization_threshold = 0.8
+        paas_ram_lower_utilization_threshold = 0.3
+        
+        # allocation policy "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        paasAllocationPolicyType = "SIMPLE"
+
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        paasVmSchedulingType = "TIMESHARED"
+
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        paasCloudletSchedulingType = "SPACESHARED"
     }
 
     iaas {
+        iaas_hosts_count = 9
+        iaas_host_mips = 1000
+        iaas_host_pe_count = 4
+        iaas_host_ram = 16384
+        iaas_host_bw = 1000
+        iaas_host_storage = 1000000
+        
+        iaas_vm_count = 18
+        iaas_vm_pe_count = 2
+        iaas_vm_ram = 4000
+        iaas_vm_bw = 1
+        iaas_vm_size = 20000
+        
+        # Utilization
+        iaas_cloudlet_cpu_utilization = 0.8
+        iaas_cloudlet_ram_utilization = 0.5
+        iaas_cloudlet_bw_utilization = 0.3
+        iaas_cloudlet_initial_ram_utilization = 0.1
+        iaas_cloudlet_max_ram_utilization = 0.8
+        
+        # cost
+        iaas_cost_per_sec = 0.001
+        iaas_cost_per_mem = 0.01
+        iaas_cost_per_storage = 0.0001
+        iaas_cost_per_bw = 0.01
+        
+        # allocation policy "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        iaasAllocationPolicyType = "SIMPLE"
+
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        iaasVmSchedulingType = "TIMESHARED"
+
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        iaasCloudletSchedulingType = "SPACESHARED"
     }
 
     faas {
+        faas_hosts_count = 9
+        faas_host_mips = 1000
+        faas_host_pe_count = 4
+        faas_host_ram = 8000
+        faas_host_bw = 1000
+        faas_host_storage = 100000
+
+        faas_vm_count = 36
+        faas_vm_pe_count = 1
+        faas_vm_ram = 512
+        faas_vm_bw = 1
+        faas_vm_size = 512
+
+        faas_max_cloudlet_length = 500
+        faas_max_cloudlet_pe = 1
+        faas_max_cloudlet_file_size = 200
+        faas_max_cloudlet_output_file_size = 200
+
+        # Utilization
+        faas_cloudlet_cpu_utilization = 0.8
+        faas_cloudlet_ram_utilization = 0.5
+        faas_cloudlet_bw_utilization = 0.3
+        faas_cloudlet_initial_ram_utilization = 0.1
+        faas_cloudlet_max_ram_utilization = 0.8
+
+        # scaling
+        # horizontal scaling
+        faas_cpu_overload_threshold = 0.8
+        # vertical ram scaling
+        faas_ram_scaling_factor = 0.1
+        faas_ram_upper_utilization_threshold = 0.8
+        faas_ram_lower_utilization_threshold = 0.3
+
+        # cost
+        faas_cost_per_sec = 0.001
+        faas_cost_per_mem = 0.01
+        faas_cost_per_storage = 0.0001
+        faas_cost_per_bw = 0.01
+
+        # allocation policy "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
+        faasAllocationPolicyType = "SIMPLE"
+
+        # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
+        faasVmSchedulingType = "TIMESHARED"
+
+        # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
+        faasCloudletSchedulingType = "SPACESHARED"
     }
+
+    saasSim {
+        numberOfCloudlets = 20
+    }
+
+    paasSim {
+        # Map Reduce PaaS inputs
+        mapReduceJobs = 20
+        jobLength = 1000
+        mapReduceJobPeConsumption = 1
+
+        # Three Tier PaaS inputs
+        threeTierAppInstances = 20
+        executionLength = 1000
+        threeTierAppPeConsumption = 1
+    }
+
+    iaasSim {
+        # variables for map reduce app on an iaas
+        mapReduceAppsToRun = 300
+        mapReduceCloudletLength = 1000
+        mapReduceAppPe = 2
+        mapReduceCloudScalingEnabled = true
+        mapReduceRamScalingFactor = 0.1
+        mapReduceCpuOverloadThreshold = 0.8
+        mapReduceRamUpperThreshold = 0.8
+        mapReduceRamLowerThreshold = 0.2
+
+        # variables for three tier app on an iaas
+        threeTierAppsToRun = 30
+        threeTierCloudletLength = 1000
+        threeTierAppPe = 1
+        threeTierCloudScalingEnabled = true
+        threeTierRamScalingFactor = 0.2
+        threeTierCpuOverloadThreshold = 0.8
+        threeTierRamUpperThreshold = 0.9
+        threeTierRamLowerThreshold = 0.1
+
+        # variables for simple (single simple cloudlet) app on an iaas
+        simpleAppsToRun = 100
+        simpleCloudletLength = 10000
+        simpleAppPe = 1
+        simpleCloudScalingEnabled = false
+        simpleRamScalingFactor = 0.2
+        simpleCpuOverloadThreshold = 0.8
+        simpleRamUpperThreshold = 0.9
+        simpleRamLowerThreshold = 0.1
+    }
+
+    faasSim {
+        faasCloudlets = 30
+        faaSCloudletLength = 500
+        faasCloudletPe = 1
+        faasCloudletSize = 200
+        faasCloudletOutputSize = 200
+    }
+
 
     allocation {
         random_allocation_policy_seed = 30
