moved entrypoint of app to a common file

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -37,13 +37,13 @@ cloudOrganizationSimulations {
     mapReduce {
         mapper_cloudlets = 3
         reducer_cloudlets = 1
-        app_count = 30
+        app_count = 10
         # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
         allocationPolicyType = "SIMPLE"
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
         vmSchedulerType = "TIMESHARED"
         # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
-        cloudletSchedulerType = "SPACESHARED"
+        cloudletSchedulerType = "TIMESHARED"
 
         # task details
         mapTaskLength = 1000
@@ -62,7 +62,7 @@ cloudOrganizationSimulations {
     threeTier {
         client_cloudlets = 1
         server_cloudlets = 2
-        app_count = 40
+        app_count = 10
         # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
         allocationPolicyType = "SIMPLE"
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
@@ -115,7 +115,7 @@ cloudOrganizationSimulations {
     }
 
     simpleCloudlet {
-        app_count = 100
+        app_count = 50
         # allocation policies are "SIMPLE", "RANDOM", "BESTFIT", "ROUNDROBIN"
         allocationPolicyType = "SIMPLE"
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
@@ -289,10 +289,10 @@ cloudOrganizationSimulations {
         saasAllocationPolicyType = "SIMPLE"
 
         # vm scheduler policies are "TIMESHARED", "SPACESHARED", "RANDOM", "PSEUDORANDOM"
-        saasVmSchedulingType = "TIMESHARED"
+        saasVmSchedulingType = "SPACESHARED"
 
         # cloudlet scheduler policies are "TIMESHARED", "SPACESHARED", "FAIR"
-        saasCloudletSchedulingType = "SPACESHARED"
+        saasCloudletSchedulingType = "TIMESHARED"
     }
 
     paas {
